--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.11.0",
+    "react-csv-reader": "^2.0.2",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0"
   },
